# earthquake

./: .all-contributorsrc  .gitignore  .log4brains.yml  .mcp.json  Cargo.toml  README.md  deny.toml  devenv.nix  devenv.yaml  eslint.config.mjs  lefthook.yml  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  project.json  rust-toolchain.toml  storm-workspace.json  tsconfig.base.json  tsconfig.json
.cargo/: config.toml
.claude/: settings.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/workflows/: codeql.yml  contributors.yml  dependabot-approval.yml  git-guardian.yml  gitguardian.yml  greetings.yml  release.yml  zizmor.yml
crates/earthquake-binding/: Cargo.toml  README.md  build.rs  project.json
crates/earthquake-binding/src/: binding_engine.rs  binding_static_analysis_engine.rs  lib.rs
crates/earthquake-binding/src/types/: binding_error.rs  binding_log.rs  binding_log_level.rs  binding_options.rs  binding_output.rs  binding_plugin_api.rs  binding_storage_preset.rs  binding_string_or_regex.rs  js_callback.rs  js_regex.rs  mod.rs
crates/earthquake-binding/src/utils/: to_binding_error.rs  trace_subscriber_guard.rs
crates/earthquake-common/: Cargo.toml  project.json
crates/earthquake-common/src/: lib.rs
crates/earthquake-common/src/log/: log.rs  log_level.rs  logger.rs  mod.rs
crates/earthquake-common/src/types/: context.rs  metadata.rs  mod.rs  module_extension.rs  module_id.rs  normalized_options.rs  options.rs  prepare_output.rs  route_module.rs  route_module_kind.rs  route_modules.rs  route_prepare_output.rs  storage_preset.rs
crates/earthquake-core/: Cargo.toml  project.json
crates/earthquake-core/src/: lib.rs  static_analysis_engine.rs
crates/earthquake-core/src/engine/: mod.rs
crates/earthquake-core/src/route/: mod.rs  route_factory.rs  route_handle.rs
crates/earthquake-error/: Cargo.toml  project.json
crates/earthquake-error/src/: diagnostic.rs  lib.rs
crates/earthquake-error/src/issues/: plugin_error.rs  unable_to_read_dir.rs  unhandleable_error.rs
crates/earthquake-error/src/types/: diagnostic_options.rs  earthquake_diagnostic.rs  issue_kind.rs  mod.rs
crates/earthquake-error/src/utils/: downcast_napi_error_diagnostics.rs  filter_out_disabled_diagnostics.rs
crates/earthquake-plugin/: Cargo.toml  project.json
crates/earthquake-plugin/src/: lib.rs  plugable.rs  plugin.rs  plugin_driver.rs  pluginable.rs
crates/earthquake-plugin/src/plugin_context/: mod.rs  native_plugin_context.rs  plugin_context_meta.rs
crates/earthquake-plugin/src/types/: hook_args.rs  hook_call_skipped.rs  hook_output.rs  hook_usage.rs  mod.rs  plugin_hook_meta.rs
crates/earthquake-tracing/: Cargo.toml  project.json
crates/earthquake-tracing/src/: debug_formatter.rs  lib.rs  tracing.rs
crates/earthquake-tracing/src/actions/: hook_call_end.rs  hook_call_start.rs  mod.rs  route_analyze_end.rs  route_analyze_start.rs  route_prepare_end.rs  route_prepare_start.rs  session_meta.rs
crates/earthquake-tracing/src/route/: generate_route_id.rs  mod.rs
crates/earthquake-utils/: Cargo.toml  README.md  project.json
crates/earthquake-utils/src/: lib.rs  pattern_filter.rs
docs/book/: book.toml  package.json
docs/book/src/: SUMMARY.md  intro.md
docs/book/src/architecture/: intro.md
docs/book/src/cli/: SUMMARY.md  cli.md  earthquake.md  help.py  update.sh
docs/book/src/cli/earthquake/: run.md
docs/book/src/installation/: installation.md
docs/book/src/run/: run_earthquake.md
docs/book/src/theme/: head.hbs
playground/starter/: earthquake.config.ts  package.json  tsconfig.json
playground/starter/routes/: layout.tsx
tools/config/: .gitpod.yml  README.md  package.json  tsconfig.lib.json  tsup.shared.d.ts.map  tsup.shared.ts  verdaccio.yml  zizmor.yml
tools/cspell/: package.json  rust-phrases.txt
tools/errors/: README.md  package.json
tools/plugin-build/: README.md  package.json  powerlines.config.ts  project.json  tsconfig.lib.json
tools/plugin-build/src/: index.ts
tools/plugin-build/src/types/: index.ts  plugin.ts
tools/readme-templates/: README.footer.md  README.header.md  package.json
tools/scripts/: README.md  package.json
tools/scripts/src/: bootstrap.mjs  build.mjs  clean.mjs  format.mjs  index.ts  lint.mjs  nuke.mjs  release.mjs  typecheck.mjs  update-react.mjs  update-storm.mjs
