[workspace]
members = ["crates/*"]
defaultMembers = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
description = "💥 A React framework to simplify RSC, SSG, and SSR using Storm Stack."
repository = "https://github.com/storm-software/earthquake"
edition = "2024"
authors = ["storm-software", "pat-sullivan"]
license = "Apache-2.0"
documentation = "https://earthquake.rs/docs"
homepage = "https://earthquake.rs"
categories = ["config", "development-tools"]
keywords = ["earthquake", "storm-software", "monorepo"]
readme = "./README.md"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
# Guidelines
# - We should only disable rules globally if they are either false positives, chaotic, or does not make sense.
# - Group are enabled with priority -1, so we could easily override some specific rules.
#   - https://doc.rust-lang.org/stable/cargo/reference/manifest.html#the-lints-section

# --- restriction https://doc.rust-lang.org/clippy/usage.html#clippyrestriction
allow_attributes = "deny"
dbg_macro = "deny"
print_stdout = "deny"

# I like the explicitness of this rule as it removes confusion around `clone`.
# This increases readability, avoids `clone` mindlessly and heap allocating on accident.
clone_on_ref_ptr = "deny"
empty_drop = "deny"
exit = "deny"
filetype_is_file = "deny"
get_unwrap = "deny"
rc_buffer = "deny"
rc_mutex = "deny"
rest_pat_in_fully_bound_structs = "deny"
unnecessary_safety_comment = "deny"

# --- pedantic #https://doc.rust-lang.org/clippy/usage.html#clippypedantic
# To write the best rust code, pedantic group is enabled by default.
pedantic = { level = "deny", priority = -1 }
case_sensitive_file_extension_comparisons = "allow"

# Wizards, naming is too hard.
module_inception = "allow"
module_name_repetitions = "allow"
similar_names = "allow"

# Forwarding `Result` is a common pattern, this rule is too pedantic.
missing_errors_doc = "allow"

# #[must_use] is creating too much noise for this codebase, it does not add much value except nagging
# the programmer to add a #[must_use] after clippy has been run.
# Having #[must_use] everywhere also hinders readability.
must_use_candidate = "allow"

doc_markdown = "allow"
missing_const_for_fn = "allow"
needless_for_each = "allow"
new_without_default = "allow"
# TODO: should review this rule.
missing_panics_doc = "allow"

# Order doesn't really matter https://rust-lang.github.io/rust-clippy/master/index.html#/inconsistent_struct_constructor
inconsistent_struct_constructor = "allow"

# Single match is equally readable as if/else. https://rust-lang.github.io/rust-clippy/master/index.html#/single_match
single_match = "allow"
single_match_else = "allow"

# Though the following are nursery rules, they’re still useful.
debug_assert_with_mut_call = "warn"
iter_on_single_items = "warn"
needless_pass_by_ref_mut = "warn"
redundant_clone = "warn"
redundant_pub_crate = "warn"
significant_drop_in_scrutinee = "warn"
unused_peekable = "warn"

# Rewriting `unwrap_or` to `map_or` requires to annotate type explicitly which is cumbersome
map_unwrap_or = "allow"

collapsible_if = "allow"

[workspace.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Declare dependencies used across workspace packages requires single version bump.
# ref: https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#inheriting-a-dependency-from-a-workspace
[workspace.dependencies]
# Earthquake
earthquake-binding = { path = "./crates/earthquake-binding" }
earthquake-core = { path = "./crates/earthquake-core" }
earthquake-common = { path = "./crates/earthquake-common" }
earthquake-plugin = { path = "./crates/earthquake-plugin" }
earthquake-error = { path = "./crates/earthquake-error" }
earthquake-tracing = { path = "./crates/earthquake-tracing" }
earthquake-utils = { path = "./crates/earthquake-utils" }

# Storm Software
storm-config = "0.27.4"

anyhow = "1.0.98"
arcstr = { version = "1.2.0", default-features = false }
ariadne = { package = "rolldown-ariadne", version = "0.5.3" }
async-channel = "2.5.0"
async-trait = "0.1.89"
async-scoped = { version = "0.9.0", features = ["use-tokio"] }
blake3 = "1.8.2"
bitflags = "2.10.0"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["debug"] }
futures = "0.3.31"
flate2 = { version = "=1.1.2", features = ["zlib-rs"] }
itertools = "0.14.0"
mimalloc-safe = "0.1.52"
num_cpus = "1.17.0"
camino = { version = "1.2.1", features = ["serde1"] }
cow-utils = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
schemars = "1.1.0"
sugar_path = "1.2.1"
regex = "1.12.2"
base-encode = "0.3.1"
memchr = "2.7.6"
xxhash-rust = "0.8.15"
uuid = { version = "1.4.2", features = ["v4"] }
regress = "0.10.5"
rayon = "1.7.0"
fast-glob = "1.0.0"
form_urlencoded = "1.2.2"
base64-simd = "0.8.0"
rustc-hash = { version = "2.1.1" }
ropey = "1.6.1"
url = "2.5.4"
urlencoding = "2.1.3"
walkdir = "2.5.0"
nom = { version = "8.0.0", features = ["std"] }
mime = "0.3.17"
simdutf8 = "0.1.5"
infer = "0.19.0"
tokio = { version = "1.48.0", default-features = false }
tracing = { version = "0.1.41", features = ["valuable"] }
tracing-chrome = "0.7.2"
tracing-subscriber = { version = "0.3.19", default-features = false }
typedmap = { version = "0.6.0", features = ["dashmap"] }
ts-rs = "11.1.0"

# oxc crates with the same version
oxc = { version = "0.97.0", features = [
  "ast_visit",
  "transformer",
  "minifier",
  "mangler",
  "semantic",
  "codegen",
  "serialize",
  "isolated_declarations",
  "regular_expression",
  "cfg"
] }
oxc_allocator = { version = "0.97.0", features = ["pool"] }
oxc_ecmascript = { version = "0.97.0" }
oxc_minify_napi = { version = "0.97.0" }
oxc_parser_napi = { version = "0.97.0" }
oxc_transform_napi = { version = "0.97.0" }
oxc_traverse = { version = "0.97.0" }

# oxc crates in their own repos
# Versions must be relaxed for usage in oxc.
# Please update with `cargo update oxc_resolver oxc_resolver_napi oxc_sourcemap oxc_index oxc-browserslist`
oxc_index = { version = "4", features = ["rayon", "serde"] }
oxc_resolver = { version = "11.13.2" }
oxc_resolver_napi = { version = "11.13.2" }
oxc_sourcemap = { version = "6.0.1" }

# napi
napi = { version = "3.0.0", features = [
  "async",
  "anyhow",
  "napi4",
  "tokio_rt"
] }
napi-build = { version = "2.2.2" }
napi-derive = { version = "3.0.0", default-features = false, features = [
  "type-def"
] }

# [patch.crates-io]
# flate2 = { git = "https://github.com/dmccloskey/flate2-rs" }

[profile.dev]
debug = "line-tables-only"
incremental = true

[profile.release]
codegen-units = 1
debug = false
lto = "fat"
opt-level = 3
strip = "symbols"

[profile.release-debug]
debug = true
inherits = "release"

[profile.release-debug-fast]
debug = true
inherits = "release"
strip = "none"

[profile.prod]
debug = "line-tables-only"
strip = false
lto = "thin"
inherits = "release"

[profile.release-wasi]
inherits = "release"
opt-level = "s"
# napi-rs generates *-debug.*.wasm files with these information
# it will strip these information for non-debug files
debug = "full"
strip = "none"

# [profile.prod]
# codegen-units = 1
# incremental = false
# inherits = "release"
# lto = "fat"
