[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = "The core Earthquake crate that provides various utilities and functions to process the Earthquake project's files."
documentation = "https://docs.rs/earthquake"
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = "earthquake-core"
publish       = true
readme        = "./README.md"
repository    = { workspace = true }
version       = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
# Earthquake
earthquake-common  = { workspace = true }
earthquake-error   = { workspace = true }
earthquake-plugin  = { workspace = true }
earthquake-tracing = { workspace = true }
earthquake-utils   = { workspace = true }

# Storm Software
storm-config = { workspace = true }

anyhow             = { workspace = true }
arcstr             = { workspace = true }
ariadne            = { workspace = true }
blake3             = { workspace = true }
camino             = { workspace = true }
derive_more        = { workspace = true }
rayon              = { workspace = true }
regex              = { workspace = true }
rustc-hash         = { workspace = true }
schemars           = { workspace = true, optional = true }
serde              = { workspace = true, features = ["derive"], optional = true }
serde_json         = { workspace = true }
tokio              = { workspace = true, features = ["rt", "macros", "sync", "time"] }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }

# Oxc
jwalk          = "0.8.1"
oxc            = { workspace = true }
oxc_allocator  = { workspace = true }
oxc_ecmascript = { workspace = true }
oxc_index      = { workspace = true }
oxc_traverse   = { workspace = true }

[features]
default      = ["serde"]
experimental = []
serde        = ["dep:serde", "oxc_index/serde"]
testing      = []

[package.metadata.cargo-shear]
# `serde_json` is used in `trace_action` macro.
ignored = ["serde", "serde_json"]
