[package]
name = "earthquake-plugin"
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/earthquake"
readme = "./README.md"

[lib]
doctest = false

[lints]
workspace = true

[features]
default = ["serde"]
serde = ["dep:serde", "oxc_index/serde"]

[dependencies]

# Earthquake
earthquake-common = { workspace = true }
earthquake-error = { workspace = true }
earthquake-tracing = { workspace = true }
earthquake-utils = { workspace = true }

arcstr = { workspace = true }
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
bitflags = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
oxc_index = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true }
sugar_path = { workspace = true }
tokio = { workspace = true, features = ["sync"] }
tracing = { workspace = true, features = ["valuable"] }
typedmap = { workspace = true, features = ["dashmap"] }

[package.metadata.cargo-shear]
# `serde_json` is used in `trace_action` macro.
ignored = ["serde", "serde_json"]
