[package]
authors       = { workspace = true }
categories    = { workspace = true }
description   = "The core Earthquake crate that provides various utilities and functions to process the Earthquake project's files."
documentation = "https://docs.rs/earthquake"
edition       = { workspace = true }
homepage      = { workspace = true }
keywords      = { workspace = true }
license       = { workspace = true }
name          = "earthquake-tracing"
publish       = false
readme        = "./README.md"
repository    = { workspace = true }
version       = "0.1.0"

[lib]
doctest = false

[lints]
workspace = true

[features]
default      = ["serde"]
experimental = []
serde        = ["dep:serde", "oxc_index/serde"]
testing      = []

[dependencies]
anyhow             = { workspace = true }
arcstr             = { workspace = true }
ariadne            = { workspace = true }
bitflags           = { workspace = true }
blake3             = { workspace = true }
dashmap            = { workspace = true }
rustc-hash         = { workspace = true }
serde              = { workspace = true, optional = true }
serde_json         = { workspace = true }
sugar_path         = { workspace = true }
tracing            = { workspace = true }
tracing-chrome     = { workspace = true }
tracing-subscriber = { workspace = true }
ts-rs              = { workspace = true }

# Oxc
oxc            = { workspace = true }
oxc_allocator  = { workspace = true }
oxc_ecmascript = { workspace = true }
oxc_index      = { workspace = true }
oxc_traverse   = { workspace = true }
